--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>Photo Colorizer for Facebook Messenger by Deep Retina</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -31,7 +31,7 @@
 
 </head>
 
-<body id="page-top" class="index" style="background: #0077e6;">
+<body class="index" style="background: #0077e6;">
 
     <!-- Navigation -->
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
@@ -304,6 +304,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         Copyright &copy; Deep Retina 2016 - <a href="http://deep-retina.com/colorizer/terms-of-use" style="color:white;">Terms of Use</a>, <a href="http://deep-retina.com/colorizer/privacy" style="color:white;">Privacy Policy</a>
+
                     </div>
                 </div>
             </div>
@@ -336,11 +337,21 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
-    <!-- Plugin JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script>
+        (function($) {
+            // Closes the Responsive Menu on Menu Item Click
+            $('.navbar-collapse ul li a').click(function(){
+                $('.navbar-toggle:visible').click();
+            });
 
-        <!-- Theme JavaScript -->
-    <script src="js/freelancer.min.js"></script>
+            // Offset for Main Navigation
+            $('#mainNav').affix({
+                offset: {
+                    top: 100
+                }
+            })
+        })(jQuery);
+    </script>
 
 </body>
 
