Better image for logo

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/logo1024.png" alt="" style="max-width:300px; border-radius: 50%;">
+                    <img class="img-responsive" src="img/colorizerCode.png" alt="" style="max-width:300px; border-radius: 50%;">
                     <div class="intro-text">
                         <span class="name">Photo Colorizer</span>
                         <span class="skills">Automatically colors old vintage photos with artificial intelligence</span>
